# SmallVector-project

./: .clang-tidy  .clangformat  .gitignore  CMakeLists.txt
include/: SmallVector.h
tests/: CMakeLists.txt  smallvector_tests.cpp
